# pixi-skills

./: .copier-answers.yml  .lefthook.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  scorecard.yml
pixi_skills/: backend.py  cli.py  selector.py  skill.py
tests/: test_backend.py  test_cli.py  test_core.py  test_selector.py  test_skill.py
