[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixi-skills"
description = "Manage coding agent skills using pixi"
# replaced in CI
version = "0.0.0"
authors = [{ name = "Pavel Zwerschke", email = "pavelzw@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = ["typer>=0.12", "rich>=13", "questionary>=2"]

[project.urls]
repository = "https://github.com/pavelzw/pixi-skills"

[tool.hatch.build.targets.wheel]
packages = ["pixi_skills"]

[project.scripts]
pixi-skills = "pixi_skills.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.13'
no_implicit_optional = true
check_untyped_defs = true

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
